DOC Add Performance test results, All Pass FIX Add contrast to improve the accessibility score in contact form
The lower performance record in Gallery is because of the size of the pictures.  The pictures need to be optimized for web Use.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -322,7 +322,8 @@ footer p {
 
   margin: 150px 30px 0 30px;
   color: #fff;
-  background-color: rgba(60, 60, 60, 0.85);
+  /* background-color: rgba(60, 60, 60, 0.85); */
+  background-color: rgb(12, 22, 44 ,.85);
   max-width: 70%;
   left: 10%;
   padding: 30px;
@@ -383,10 +384,11 @@ textarea {
   border-radius: 2px;
   padding: 15px 32px 15px 32px;
   text-align: center;
-  font-size: 100%;
+  font-size: 130%;
   background-color: #98c004;
   color: #fafafa;
   display: block;
+  color: #0c162c;
 }
 
 .send-button:hover {
